# codetool

./: CMakeLists.txt  README.md
include/codetool/: find_usages_pair.hpp
include/codetool/utils/: source_file.hpp
include/codetool/visitors/: find_usage_pair.hpp
src/plugins/: find_usages_pair.cpp
src/tools/: find_usages_pair.cpp
test/: CMakeLists.txt  external_struct.h  simple.c  test_find_usage.cpp
